generateRandomArray example